Fixing header items spacing

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -10,9 +10,6 @@
     flex-direction: row;
     padding: 20px 20px;
     gap: 1rem;
-}
-
-#navbar-list2 {
     justify-content: space-between;
 }
 
